--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
-	"owner": "",  // ID of user account
-	"prefix": "", // Desired prefix
-	"token": ""   // Bot token
+  "prefix": "/",
+  "token": "NTA1ODE5NzQyOTc2ODY4MzUy.DwOuQg.7YG6j2ceuT32tNDykE3XkDR4imE"
 }
